# django-simple-chatbot

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
simple_chatbot/: __init__.py  admin.py  apps.py  models.py  responses.py  serializers.py  settings.py  signals.py  tokenizer.py  utils.py  views.py
simple_chatbot/management/commands/: patterns.txt  simple_chatbot_initial.py
simple_chatbot/migrations/: 0001_initial.py  0002_auto_20210501_1537.py  0003_auto_20210501_1540.py  0004_usermessageinput.py  0005_auto_20210502_1535.py
tests/: __init__.py  settings.py  test_tokenizer.py
tests/tests/: asgi.py  settings.py  urls.py  wsgi.py
