[metadata]
name = django-simple-chatbot
version = 0.0.2
author = Janga
author_email = jangascodingplace@gmail.com
description = A very basic Django Chatbot ft. NLTK and DRF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Codingplace42/django-simple-chatbot
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = simple_chatbot
python_requires = >=3.7
install_requires = \
    django >= 2.2
    nltk
    djangorestframework
